<resources>
    <string name="app_name">Map and Pokemon</string>
    <string name="pokemon">Pokemon</string>
    <string name="location">Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pikachu">Pickachu</string>
    <string name="bug_bite">Bug Bite</string>
    <string name="fire_fang">Fire Fang</string>
    <string name="smack_down">Smack Down</string>
    <string name="fire_spin">Fire Spin</string>
    <string name="rock_slide">Rock Slide</string>
    <string name="shadow_ball">Shadow Ball</string>
    <string name="bullet_punch">Bullet punch</string>
    <string name="psystrike">Psystrike</string>
    <string name="confusion">Confusion</string>
    <string name="hydro_pump">Hydro Pump</string>
    <string name="title_activity_maps">Map</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="select_photo">Select Photo</string>
</resources>